<?xml version="1.0"?>
<package format="2">
  <name>admittance</name>
  <version>0.0.0</version>
  <description>The Admittance package</description>


  <maintainer email="robot@todo.todo">robot</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cartesian_state_msgs</build_depend>
  <build_depend>joint_effort_msg</build_depend>
  <build_depend>joint_state_msg</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>  
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>pinocchio</build_depend>

  
  <build_export_depend>cartesian_state_msgs</build_export_depend>
  <build_export_depend>joint_effort_msg</build_export_depend>
  <build_export_depend>joint_state_msg</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>pinocchio</build_export_depend>
  
  <exec_depend>cartesian_state_msgs</exec_depend>
  <exec_depend>joint_effort_msg</exec_depend>
  <exec_depend>joint_state_msg</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>pinocchio</exec_depend>
  

</package>
